Made folder structure
Moved files
Created placeholder files in empty folders
Fixed up all paths

--- a/views/duel.html
+++ b/views/duel.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Duel Room</title>
         <!-- Change these css locations if you change the folder structure -->
-        <link rel="stylesheet" href="../duel-files/duel-jquery-ui.css">
-        <link rel="stylesheet" href="../duel-files/duel-style.css">
+        <link rel="stylesheet" href="views/styles/duel-jquery-ui.css">
+        <link rel="stylesheet" href="views/styles/duel-style.css">
                       
         <style>
             #box
@@ -80,7 +80,7 @@
                 height: 70px;
                 background-color: #00FF00;
                 float: left;
-                content: url(../duel-files/cardback.jpg);
+                content: url(/views/images/cardback.jpg);
                 /* CHANGE this if you change folder structure. */
             }
             .draggable1:hover,.draggable:hover
@@ -92,7 +92,7 @@
             }
         </style>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-        <script src="../duel-files/duel-jquery-ui.js"></script>
+        <script src="/views/scripts/duel-jquery-ui.js"></script>
         <script>
             $(function () {
                 /*$(".draggable1").draggable({ 
