--- a/views/lobby.html
+++ b/views/lobby.html
@@ -6,7 +6,7 @@
         <meta name="description" content="website description" />
         <meta name="keywords" content="website keywords, website keywords" />
         <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-        <link rel="stylesheet" type="text/css" href="../style/style.css" />
+        <link rel="stylesheet" type="text/css" href="/views/style/style.css" />
         <style>
             
             form input { border: 0; padding: 10px; width: 91%; }
@@ -55,7 +55,7 @@
                         <input id="m" autocomplete="off" /><button>Send</button>
                     </form>
                     <br />
-                    <a href ="duel/" target ="_blank"> Duel Room </a>
+                    <a href ="/duel/" target ="_blank"> Duel Room </a>
                     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
                     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
