--- a/views/stats.html
+++ b/views/stats.html
@@ -2,11 +2,11 @@
 <html>
 
     <head>
-        <title>DM App</title>
+        <title>DM App - Decks</title>
         <meta name="description" content="website description" />
         <meta name="keywords" content="website keywords, website keywords" />
         <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-        <link rel="stylesheet" type="text/css" href="style/style.css" />
+        <link rel="stylesheet" type="text/css" href="/views/style/style.css" />
     </head>
 
     <body>
@@ -22,37 +22,20 @@
                 <div id="menubar">
                     <ul id="menu">
                         <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-                        <li class="selected"><a href="#">Home</a></li>
+                        <li ><a href="/">Home</a></li>
                         <li><a href="/lobby">Lobby</a></li>
                         <li><a href="/decks">Decks</a></li>    
-                        <li><a href="/stats">Stats</a></li>                      
+                        <li class="selected"><a href="#">Stats</a></li>
                     </ul>
                 </div>
             </div>
             <div id="content_header"></div>
             <div id="site_content">
-                <div class="sidebar">
-                    <!-- insert your sidebar items here -->
-                    <h3>Latest News</h3>
-                    <h5>August 20, 2017</h5>
-                    <p>Current working team: naveed92, NitroX, TheRealGetsuga, x3r0x_x3n0n.<br /></p>
-                    <h5>August 18, 2017</h5>
-                    <p>The app deployment was tested.<br /></p>
-                    <h3>Useful Links</h3>
-                    <ul>
-                        <li><a href="https://github.com/nitro-x/DMApp/" target="_blank">Github Repo</a></li>
-                        <li><a href="http://duelmasters.wikia.com/wiki/Duel_Masters_Wiki" target="_blank">DM Wikia</a></li>
-
-                    </ul>
-                </div>
+            
                 <div id="content">
                     <!-- insert the page content here -->
-                    <h1>Welcome to DM App</h1>
-                    Enter name:
-                    <form action="lobby/">
-                        <input type="text" name="user" value="Name">
-                        <input type="submit" value="Join">
-                    </form>
+                    <h1>Stats/Account info goes here.</h1>
+                
                 </div>
             </div>
             <div id="content_footer"></div>
