--- a/views/decks.html
+++ b/views/decks.html
@@ -6,7 +6,7 @@
         <meta name="description" content="website description" />
         <meta name="keywords" content="website keywords, website keywords" />
         <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-        <link rel="stylesheet" type="text/css" href="../style/style.css" />
+        <link rel="stylesheet" type="text/css" href="/views/style/style.css" />
     </head>
 
     <body>
