--- a/views/stats.html
+++ b/views/stats.html
@@ -16,7 +16,7 @@
                     <div id="logo_text">
                         <!-- class="logo_colour", allows you to change the colour of the text -->
                         <h1><a href="/">DM<span class="logo_colour">App</span></a></h1>
-                        <h2>Dool Masters Online.</h2>
+                        <h2>Duel Masters Online.</h2>
                     </div>
                 </div>
                 <div id="menubar">
