--- a/views/style/duel-style.css
+++ b/views/style/duel-style.css
@@ -1,16 +1,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-
 table {
     font-size: 1em;
 }
-
 .ui-draggable, .ui-droppable {
     background-position: top;
 }
-#chat_box
-{       
+#chat_box {       
     margin-left: -1px;
     width: 100%;
     height: 5vh;
@@ -27,56 +24,73 @@ table {
     display: none;
     background-color: #F0F0F0;
 }
-
-#pause,#forfiet
-{
+#pause,#forfiet {
     height: 40px;
     width: 100px;
-    background-color: #000000;
+    background-color: #FFF000;
     float: right;
     margin: 0;
     padding: 0;
 }
-#pause:hover,#forfiet:hover
-{
+#pause:hover,#forfiet:hover {
     background-color: #FFFFFF;
 }
-#chat
-{
+#chat {
     border: none;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 18%;
+    height: 98vh;
     outline: none;
     background-color: #FF00FF;
-
+    float: right;
 }
-.game
-{
-    margin-top: -8px;
-    margin-left: -1px;
+.game {
+    margin-top: 0px;
+    margin-left: 0px;
     padding: 0;
-    width: 100%;
-    height: 95vh;
+    width: 82%;
+    height: 98vh;
     overflow: hidden;
     float: left;
 }
-#opponentField
-{
-    width: 100%;
-    height: 50%;
-    background-color: #FF0000;
+#leftBar {
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    height: 98vh;
+    outline: none;
+    background-color: #FDDDDD;
+    float: left;
 }
-#selfField
-{
-    width: 100%;
+#opponentField {
+    width: 75%;
     height: 50%;
-    background-color: #0000FF;
+    background-color: #b23b2e;
+    float: right;
 }
+#selfField {
+    width: 75%;
+    height: 50%;
+    background-color: #b23b2e;
+    float: right;
 
-.draggable1,.draggable
-{ 
+}
+.battle_zone {
+    height: 40%;
+    background-color: #ff6b6b;
+    margin: 2px;
+}
+.mana_zone {
+    height: 30%;
+    background-color: #4fbf51;
+}
+.shield_zone {
+    height: 30%;
+    background-color: #22b9ec;
+}
+.draggable1,.draggable { 
     width: 50px;
     height: 70px;
     background-color: #00FF00;
@@ -84,8 +98,7 @@ table {
     content: url(/views/images/cardback.jpg);
     /* CHANGE this if you change folder structure. */
 }
-.draggable1:hover,.draggable:hover
-{
+.draggable1:hover,.draggable:hover {
     width: 55px;
     height: 77px;
     background-color: #FFFF00;
