--- a/views/style/duel-style.css
+++ b/views/style/duel-style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #808080;
 }
 table {
     font-size: 1em;
@@ -22,7 +23,7 @@ table {
     margin-top: -150px;
     float: left;
     display: none;
-    background-color: #F0F0F0;
+    background-color: #FFFFFF;
 }
 #pause,#forfiet {
     height: 40px;
@@ -42,7 +43,7 @@ table {
     width: 18%;
     height: 98vh;
     outline: none;
-    background-color: #FF00FF;
+    background-color: #FFFFFF;
     float: right;
 }
 .game {
@@ -67,28 +68,30 @@ table {
 #opponentField {
     width: 75%;
     height: 50%;
-    background-color: #b23b2e;
+    background-color: #808080;
     float: right;
 }
 #selfField {
     width: 75%;
     height: 50%;
-    background-color: #b23b2e;
+    background-color: #808080;
     float: right;
 
 }
 .battle_zone {
     height: 40%;
-    background-color: #ff6b6b;
+    background-color: #fff0f0;
     margin: 2px;
 }
 .mana_zone {
     height: 30%;
-    background-color: #4fbf51;
+    background-color: #ebffeb;
+    margin: 2px;
 }
 .shield_zone {
     height: 30%;
-    background-color: #22b9ec;
+    background-color: #ebedff;
+    margin: 2px;
 }
 .draggable1,.draggable { 
     width: 50px;
