More color fixes

--- a/views/style/duel-style.css
+++ b/views/style/duel-style.css
@@ -62,7 +62,7 @@ table {
     width: 25%;
     height: 98vh;
     outline: none;
-    background-color: #FDDDDD;
+    background-color: #FFFFFF;
     float: left;
 }
 #opponentField {
