Fixed opponent's mana zone scroll

--- a/views/duel.html
+++ b/views/duel.html
@@ -43,7 +43,6 @@
         </script>
     </head>
     <body>
-
         <div id="chat"> chat <br/>chat message 1 
             <!--<div id="pause" onclick="send_pause()">Pause</div>
                <div id="forfiet" onclick="send_win()">Forfeit</div>-->
@@ -53,16 +52,21 @@
 
             <div id="opponentField">
 
-                <div id = "opponent_mana" class="mana_zone">  <div class="draggable1 ui-widget-content">
-                    </div>
-                    <div class="draggable1 ui-widget-content">
-                    </div>
-                    <div class="draggable1 ui-widget-content">
-                    </div>
-                    <div class="draggable1 ui-widget-content">
-                    </div>
-                    <div class="draggable1 ui-widget-content">
-                    </div>
+                <div id = "opponent_mana" class="mana_zone">  
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
+                    <div class="mana_card"></div>
                 </div>
                 <div id="opponent_SDGH" class="SDGH">
                     <div id="opponent_hsp" class="col">hsp</div>
@@ -108,8 +112,6 @@
                     <div class="mana_card"></div>
                     <div class="mana_card"></div>
                     <div class="mana_card"></div>
-
-
                 </div>
 
 
