Reversed Scrollbar for opponent's mana zone

--- a/views/duel.html
+++ b/views/duel.html
@@ -53,20 +53,23 @@
             <div id="opponentField">
 
                 <div id = "opponent_mana" class="mana_zone">  
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
-                    <div class="mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+                    <div class="opp_mana_card"></div>
+
+
                 </div>
                 <div id="opponent_SDGH" class="SDGH">
                     <div id="opponent_hsp" class="col">hsp</div>
