Name changes, added new div for card view

--- a/views/duel.html
+++ b/views/duel.html
@@ -48,9 +48,13 @@
                <div id="forfiet" onclick="send_win()">Forfeit</div>-->
         </div>
         <div class="game">
-            <div id="leftBar">Hand and other stuff/tabs </div>
+            <div id="left_bar">
+                <div id="card_details">Card pic and details go here</div>
+            
+            
+            </div>
 
-            <div id="opponentField">
+            <div id="opponent_field">
 
                 <div id = "opponent_mana" class="mana_zone">  
                     <div class="opp_mana_card"></div>
@@ -80,7 +84,7 @@
                 </div>              
                 <div id= "opponent_bz" class ="battle_zone"></div>
             </div>
-            <div id="selfField">
+            <div id="self_field">
                 <div class="draggable ui-widget-content">
                 </div>
                 <div class="draggable ui-widget-content">
