--- a/views/style/duel-style.css
+++ b/views/style/duel-style.css
@@ -1,3 +1,5 @@
+* {box-sizing:border-box}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
@@ -27,7 +29,7 @@ body {
     overflow: hidden;
     float: left;
 }
-#leftBar {
+#left_bar {
     border: none;
     width: 25%;
     height: 100%;
@@ -36,13 +38,13 @@ body {
     outline:1px solid  #808080;
     outline-offset: -1px;
 }
-#opponentField {
+#opponent_field {
     width: 75%;
     height: 50%;
     background-color: #808080;
     float: right;
 }
-#selfField {
+#self_field {
     width: 75%;
     height: 50%;
     background-color: #808080;
